# practiceCMakeList

./: CMakeLists.txt  README.md  build.sh  main.cpp  myapp
lib/: CMakeLists.txt  build_lib.sh  mylib.cpp  mylib.h
